// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextArea Text Area Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                cols={10}
                css={[Function]}
                placeholder="Label"
                required={false}
                rows={10}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                cols={35}
                css={[Function]}
                placeholder="Label"
                required={false}
                rows={20}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                placeholder="placeholder here"
                required={false}
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                placeholder="placeholder here"
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                placeholder="placeholder here"
                required={false}
                styleType="elevated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                disabled={false}
                hintMsg="Hint in Text Area"
                placeholder="Label"
                required={false}
                status="normal"
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="filled"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <textarea
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="elevated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="filled"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="elevated"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="filled"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="outlined"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <textarea
                    css={[Function]}
                    hintMsg="Error in Text Area"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="elevated"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
